@startuml archi-diagram-v2

' Layers
package "API Layer" {
    class PropertyController
    class InvestmentController
    class UserController
    class WalletController
}

package "Application Layer" {
    class PropertyService
    class InvestmentService
    class UserService
    class WalletService
    class NotificationService
}

package "Domain Layer" {
    class Property {
      - id: UUID
      - name: String
      - type: String
      - price: double
      - fundingDeadline: Date
      - fundingStatus: String
      + calculateRentalIncome(): double
      + calculateAppreciation(): double
    }

    class User {
      - id: UUID
      - name: String
      - email: String
      - wallet: Wallet
      + register(): void
      + login(): void
    }

    class Investment {
      - id: UUID
      - property: Property
      - user: User
      - sharePercentage: double
      - investmentAmount: double
      + calculateReturns(): double
    }

    class Wallet {
      - id: UUID
      - balance: double
      + credit(amount: double): void
      + debit(amount: double): void
      + getBalance(): double
    }

    class Certificate {
      - id: UUID
      - property: Property
      - user: User
      - issuedDate: Date
    }

    class DomainService {
      + handleConcurrency(): void
      + notifyInvestors(): void
      + validateInvestment(): void
    }
}

package "Infrastructure Layer" {
    class PropertyRepository
    class InvestmentRepository
    class UserRepository
    class WalletRepository
    class StripePaymentGateway
    class EmailService
    class NotificationService
}

' Relationships
PropertyController --> PropertyService
UserController --> UserService
InvestmentController --> InvestmentService
WalletController --> WalletService

PropertyService --> PropertyRepository
InvestmentService --> InvestmentRepository
UserService --> UserRepository
WalletService --> WalletRepository

NotificationService --> EmailService
NotificationService --> StripePaymentGateway

DomainService --> Property
DomainService --> Investment
DomainService --> Wallet

InvestmentService --> Investment
InvestmentService --> Property
InvestmentService --> PropertyRepository
UserService --> User
WalletService --> Wallet

Property "1" -- "*" Investment
User "1" -- "*" Investment
User "1" -- "1" Wallet
Investment "1" -- "1" Certificate

Property "1" -- "*" Certificate

@enduml
